feat(gui): chill